--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     font-family: roboto, sans-serif;
 }
+
+.hero {
+    background-color: #1F2937;
+}
+
+.link {
+    font-size: 18px;
+    color: #E5E7EB;
+}
