--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: roboto, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 .hero {
@@ -9,4 +10,20 @@ body {
 .link {
     font-size: 18px;
     color: #E5E7EB;
+    display: flex;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
 }
