--- a/style.css
+++ b/style.css
@@ -26,4 +26,10 @@ body {
 ul {
     margin: 0;
     padding: 0;
+    list-style: none;
+}
+
+li {
+    display: inline-block;
+    padding: 10px;
 }
