--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    padding: 5px;
+    font-weight: bold;
 }
 
 .header {
@@ -32,4 +34,14 @@ ul {
 li {
     display: inline-block;
     padding: 10px;
+}
+
+.heading-main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.text-main {
+
 }
