--- a/style.css
+++ b/style.css
@@ -55,3 +55,13 @@ button {
     font-weight: bold;
     border-radius: 10px;
 }
+
+.hero-main {
+    display: flex;
+}
+
+.right-main {
+    padding: 80px;
+    background-color: grey;
+    color: #E5E7EB;
+}
