--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: Roboto, Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -83,4 +83,9 @@ button {
     justify-content: center;
     align-items: center;
     margin-right: 40px;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 800;
 }
