--- a/style.css
+++ b/style.css
@@ -85,7 +85,21 @@ button {
     margin-right: 40px;
 }
 
+
+.information {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .info-header {
     font-size: 36px;
     font-weight: 800;
+    color: #1F2937;
+}
+
+.box {
+    height: 50px;
+    width: 50px;
+    border: 3px solid #3882F6;
 }
