--- a/style.css
+++ b/style.css
@@ -131,3 +131,16 @@ button {
     text-align: center;
     padding-right: 5px;
 }
+
+.qoute {
+    display: flex;
+    flex: 1;
+    background-color: #E5E7EB;
+    padding: 70px;
+}
+
+.qoute-box {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
