--- a/style.css
+++ b/style.css
@@ -157,3 +157,20 @@ button {
     font-style: normal;
     font-size: 24px;
 }
+
+.call {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 80px 0px;
+}
+
+.call-box {
+    height: 200px;
+    width: 1000px;
+    display: flex;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
+}
