--- a/style.css
+++ b/style.css
@@ -166,11 +166,16 @@ button {
 }
 
 .call-box {
-    height: 200px;
+    height: 150px;
     width: 1000px;
-    display: flex;
     background-color: #3882F6;
     color: #F9FAF8;
+    display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.call-header {
+    font-weight: bold;
+    font-size: 24px;
 }
