--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
 }
 
 .call-header {
@@ -182,4 +183,14 @@ button {
 
 .call-button {
     margin-left: 160px;
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    height: 60px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
 }
